--- a/Python_DataStructures.ipynb
+++ b/Python_DataStructures.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List\n",
+    "## 1. List\n",
     "- A dynamic array that can hold elements of any data type.\n",
     "\n",
     "### Key Functions/Methods:\n",
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuples\n",
+    "## 2. Tuples\n",
     "- Immutable sequences, commonly used to store related pieces of information.\n",
     "\n",
     "Key Functions/Methods:\n",
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dictionaries\n",
+    "##  3. Dictionaries\n",
     "- Key-value pairs, where each key is unique.\n",
     "\n",
     "Key Functions/Methods:\n",
@@ -593,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sets\n",
+    "## 4. Sets\n",
     "- Unordered collections of unique elements.\n",
     "##### Key Functions/Methods:\n",
     "- add(): Add a new element.\n",
@@ -728,7 +728,339 @@
     "set_b = {1,2,4}\n",
     "\n",
     "print(set_b.issubset(set_a))\n",
-    "print(set_a.issuperset(set_b))\n"
+    "print(set_a.issuperset(set_b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Strings\n",
+    "- Immutable sequences of characters.\n",
+    "#### Key Functions/Methods:\n",
+    "- lower(): Convert string to lowercase.\n",
+    "- upper(): Convert string to uppercase.\n",
+    "- split(): Split string into a list of substrings.\n",
+    "- join(): Join a list of strings with a separator.\n",
+    "- replace(): Replace occurrences of a substring with another substring.\n",
+    "- find(): Return the index of the first occurrence of a substring.\n",
+    "- startswith(): Check if string starts with a substring.\n",
+    "- endswith(): Check if string ends with a substring."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first character in string: H\n",
+      "Lower case converted string: hi, coders\n",
+      "Upper case converted string: HI, CODERS\n",
+      "['Hi,', 'Coders']\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = \"Hi, Coders\"\n",
+    "print(\"first character in string:\",string1[0])\n",
+    "lower_string = string1.lower()\n",
+    "print(\"Lower case converted string:\",lower_string)\n",
+    "upper_string = string1.upper()\n",
+    "print(\"Upper case converted string:\",upper_string)\n",
+    "# Split into list\n",
+    "words = string1.split()\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coding is awesome\n",
+      "Coding-is-awesome\n"
+     ]
+    }
+   ],
+   "source": [
+    "## JOIN ###\n",
+    "# List of strings\n",
+    "words = [\"Coding\", \"is\", \"awesome\"]\n",
+    "\n",
+    "# Join with a space separator\n",
+    "sentence = \" \".join(words)\n",
+    "print(sentence)  # Output: Coding is awesome\n",
+    "\n",
+    "# Join with a hyphen separator\n",
+    "hyphenated = \"-\".join(words)\n",
+    "print(hyphenated)  # Output: Coding-is-awesome\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Professionals!\n",
+      "He**o, Professiona*s!\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Replace ####\n",
+    "# Original string\n",
+    "text = \"Hello, Coders!\"\n",
+    "\n",
+    "# Replace 'text = \"Hello, Coders!\" with 'Professionals'\n",
+    "new_text = text.replace(\"Coders\", \"Professionals\")\n",
+    "print(new_text)  # Output: Hello, Professionals!\n",
+    "\n",
+    "# Replace 'l' with '*'\n",
+    "replaced = new_text.replace(\"l\", \"*\")\n",
+    "print(replaced)  # Output: He**o, Professiona*s!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "29\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### find ###\n",
+    "# Original string\n",
+    "sentence = \"Coding in Python programming is fun.\"\n",
+    "\n",
+    "# Find the index of 'programming'\n",
+    "index = sentence.find(\"programming\")\n",
+    "print(index)\n",
+    "\n",
+    "# Find the index of 'is'\n",
+    "index_is = sentence.find(\"is\")\n",
+    "print(index_is)\n",
+    "\n",
+    "# If the substring is not found, it returns -1\n",
+    "index_not_found = sentence.find(\"Java\")\n",
+    "print(index_not_found)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "### starts with ####\n",
+    "# Original string\n",
+    "greeting = \"Hello, Coders!\"\n",
+    "\n",
+    "# Check if it starts with 'Hello'\n",
+    "starts_with_hello = greeting.startswith(\"Hello\")\n",
+    "print(starts_with_hello)  # Output: True\n",
+    "\n",
+    "# Check if it starts with 'Python'\n",
+    "starts_with_python = greeting.startswith(\"Coders\")\n",
+    "print(starts_with_python)  # Output: False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "### ENDS WITH ####\n",
+    "# Original string\n",
+    "filename = \"Python_DataStructures.py\"\n",
+    "\n",
+    "# Check if it ends with '.py'\n",
+    "ends_with_py = filename.endswith(\".py\")\n",
+    "print(ends_with_py)  # Output: True\n",
+    "\n",
+    "# Check if it ends with '.txt'\n",
+    "ends_with_txt = filename.endswith(\".txt\")\n",
+    "print(ends_with_txt)  # Output: False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Queues\n",
+    "#### First-In-First-Out (FIFO) data structure.\n",
+    "#### Key Functions/Methods:\n",
+    "You can implement a queue using collections.deque (double-ended queue).\n",
+    "- append(): Add an element to the end.\n",
+    "- popleft(): Remove and return the first element.\n",
+    "- appendleft(): Add an element to the front.\n",
+    "- pop(): Remove and return the last element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['Alice', 'Bob', 'Charlie'])\n",
+      "deque(['Alice', 'Bob', 'Charlie', 'David'])\n",
+      "Alice\n",
+      "deque(['Micheal', 'Bob', 'Charlie', 'David'])\n",
+      "David\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "queue = deque([\"Alice\", \"Bob\", \"Charlie\"])\n",
+    "print(queue)\n",
+    "# Add to queue\n",
+    "queue.append(\"David\")\n",
+    "print(queue)\n",
+    "# Remove from front\n",
+    "first = queue.popleft()\n",
+    "print(first)  # Alice\n",
+    "\n",
+    "queue.appendleft(\"Micheal\")\n",
+    "print(queue)\n",
+    "\n",
+    "last = queue.pop()\n",
+    "print(last)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Stacks\n",
+    "Last-In-First-Out (LIFO) data structure.\n",
+    "#### Key Functions/Methods:\n",
+    "You can implement a stack using a list.\n",
+    "- append(): Add an element to the top of the stack.\n",
+    "- pop(): Remove and return the top element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack = []\n",
+    "\n",
+    "# Push elements onto stack\n",
+    "stack.append(1)\n",
+    "stack.append(2)\n",
+    "stack.append(3)\n",
+    "print(stack)\n",
+    "# Pop element from stack\n",
+    "top = stack.pop()\n",
+    "print(top)  # 3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Heaps\n",
+    "Binary heap used to maintain the smallest or largest elements in constant time. Use heapq for a min-heap in Python.\n",
+    "#### Key Functions/Methods:\n",
+    "- heapify(): Convert a list into a heap.\n",
+    "- heappush(): Push a new element onto the heap.\n",
+    "- heappop(): Pop the smallest element off the heap.\n",
+    "- heapreplace(): Pop and return the smallest element, and push a new element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "heap = [3, 2, 5, 1, 4]\n",
+    "\n",
+    "# Convert list to heap\n",
+    "heapq.heapify(heap)\n",
+    "\n",
+    "# Push a new element\n",
+    "heapq.heappush(heap, 0)\n",
+    "\n",
+    "# Pop the smallest element\n",
+    "smallest = heapq.heappop(heap)\n",
+    "print(smallest)  # 0\n",
+    "\n",
+    "print(heapq.heapreplace(heap, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Linked Lists\n",
+    "Not a built-in data structure, but can be implemented using classes and nodes."
    ]
   }
  ],
