-- basic programing question on python DS

--- a/Python_DataStructures.ipynb
+++ b/Python_DataStructures.ipynb
@@ -1074,6 +1074,283 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example questions\n",
+    "def second_largest(numbers):\n",
+    "    # Remove duplicates\n",
+    "    unique_numbers = list(set(numbers))\n",
+    "    # Sort in descending order\n",
+    "    unique_numbers.sort(reverse=True)\n",
+    "    # Return the second largest\n",
+    "    return unique_numbers[1] if len(unique_numbers) > 1 else None\n",
+    "\n",
+    "# Example usage\n",
+    "numbers = [3, 1, 4, 1, 5, 9, 2, 6, 5, 3, 5]\n",
+    "print(second_largest(numbers))  # Output: 6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap(a, b):\n",
+    "    # Swap using tuple unpacking\n",
+    "    a, b = b, a\n",
+    "    return a, b\n",
+    "\n",
+    "# Example usage\n",
+    "x, y = 5, 10\n",
+    "x, y = swap(x, y)\n",
+    "print(x, y)  # Output: 10 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'i': 2, 'n': 1, 't': 1, 'e': 2, 'r': 1, 'v': 1, 'w': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def char_frequency(string):\n",
+    "    frequency = {}\n",
+    "    for char in string:\n",
+    "        frequency[char] = frequency.get(char, 0) + 1 #get return the 0 value if the char doesn't exist\n",
+    "    return frequency\n",
+    "\n",
+    "# Example usage\n",
+    "text = \"interview\"\n",
+    "print(char_frequency(text))  # Output: {'i': 2, 'n': 1, 't': 1, 'e': 2, 'r': 1, 'v': 1, 'w': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fun is Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_words(sentence):\n",
+    "    words = sentence.split()\n",
+    "    return ' '.join(reversed(words)) #reversed function helps in reverse of words\n",
+    "\n",
+    "# Example usage\n",
+    "sentence = \"Python is fun\"\n",
+    "print(reverse_words(sentence))  # Output: \"fun is Python\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4: 2, 5: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to count the common words between two list, return dictionary with common words and the count number of times present in list2\n",
+    "def common_elements(list1, list2):\n",
+    "    freq_dict = {}\n",
+    "    for element in list1:\n",
+    "        if element in list2:\n",
+    "            freq_dict[element] = list2.count(element)\n",
+    "    return freq_dict\n",
+    "\n",
+    "# Example usage\n",
+    "list1 = [1, 2, 3, 4, 5]\n",
+    "list2 = [4, 4, 5, 6, 7]\n",
+    "print(common_elements(list1, list2))  # Output: {4: 2, 5: 1}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# returns first occurance of maximum value and its index\n",
+    "def max_value_with_index(numbers):\n",
+    "    max_val = max(numbers)\n",
+    "    index = numbers.index(max_val)\n",
+    "    return max_val, index\n",
+    "\n",
+    "# Example usage\n",
+    "numbers = [10, 20, 50, 30, 50]\n",
+    "print(max_value_with_index(numbers))  # Output: (50, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Alice, age: 30, city: New York\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary to string\n",
+    "def dict_to_string(d):\n",
+    "    return ', '.join([f'{k}: {v}' for k, v in d.items()])\n",
+    "\n",
+    "# Example usage\n",
+    "person = {'name': 'Alice', 'age': 30, 'city': 'New York'}\n",
+    "print(dict_to_string(person))  # Output: \"name: Alice, age: 30, city: New York\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Alice', 'age': 25, 'city': 'New York'}\n",
+      "{1: 2, 3: 4, 5: 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# converting list of tuples to a dictionary\n",
+    "def tuples_to_dict(tuples):\n",
+    "    return dict(tuples)\n",
+    "\n",
+    "# Example usage\n",
+    "list_of_tuples = [('name', 'Alice'), ('age', 25), ('city', 'New York')]\n",
+    "print(tuples_to_dict(list_of_tuples))  # Output: {'name': 'Alice', 'age': 25, 'city': 'New York'}\n",
+    "print(tuples_to_dict([(1,2),(3,4),(5,6)]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['radar', 'level', 'madam']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# return all polindrome words\n",
+    "def find_palindromes(words):\n",
+    "    return [word for word in words if word == word[::-1]]\n",
+    "\n",
+    "# Example usage\n",
+    "words = [\"radar\", \"python\", \"level\", \"world\", \"madam\"]\n",
+    "print(find_palindromes(words))  # Output: ['radar', 'level', 'madam']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'this': 2, 'is': 2, 'a': 2, 'test': 2, 'only': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to count frequency of each word in the sentence\n",
+    "def word_frequency(sentence):\n",
+    "    words = sentence.split()\n",
+    "    freq_dict = {}\n",
+    "    for word in words:\n",
+    "        freq_dict[word] = freq_dict.get(word, 0) + 1\n",
+    "    return freq_dict\n",
+    "\n",
+    "# Example usage\n",
+    "sentence = \"this is a test this is only a test\"\n",
+    "print(word_frequency(sentence))  \n",
+    "# Output: {'this': 2, 'is': 2, 'a': 2, 'test': 2, 'only': 1}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Alice', 'age': 25, 'city': 'New York'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# functin takes tuple of keys and list of values and return as a dictionary of key value pairs\n",
+    "def create_dict(keys, values):\n",
+    "    return dict(zip(keys, values))\n",
+    "\n",
+    "# Example usage\n",
+    "keys = ('name', 'age', 'city')\n",
+    "values = ['Alice', 25, 'New York']\n",
+    "print(create_dict(keys, values))  # Output: {'name': 'Alice', 'age': 25, 'city': 'New York'}\n"
+   ]
   }
  ],
  "metadata": {
