--- a/Python_DataStructures.ipynb
+++ b/Python_DataStructures.ipynb
@@ -1069,11 +1069,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Practice Examples on python data structures"
+   ]
   },
   {
    "cell_type": "code",
